# effis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  effisConfig.cmake.in  pyproject.toml  setup.py
Examples/Date/: Compose-Local.py  Compose.py
Examples/GrayScott/: Compose-Test-Perlmutter.py  Compose-Test.py  Compose.py  GrayScott.py
Examples/LoginLauncher/: Compose.ipynb  Compose.py  TestApp.py
Examples/NodeShare-Hostname-Sleep/: Compose.ipynb  HostnameSleep.py
Examples/SubWorkflow/: Compose-Test-Perlmutter.py  Compose-Test-Summit.py  Compose-Test.py  SubWorkflow.py  SubWorkflow_test.py  TestApp.py
Examples/T3D/: Compose.py  ComposePerlmutter.py  Ensemble.py  PlotterGX.py  gx_template.in  modules-andes.sh  modules-frontier.sh  modules-perlmutter.sh  modules-summit.sh  post.py  schema.py  setup-nvhpc.sh  setup-perlmutter.sh  setup.sh  t3d-gx-occami.py  t3d-gx.py  test-w7x-gx.in
Examples/T3D/occami/: plot_GK_coefficients.py
Examples/T3D/occami/genray_run/: all_vars  genray.in  profile_dens  profile_temp
Examples/XGC/: Compose.py
OldFrontend/: effisConfig.cmake.in
OldFrontend/doc/: composition.md  preprocessor.md
OldFrontend/examples/: CMakeLists.txt
OldFrontend/examples/simple/Cpp/: CMakeLists.txt  example.yaml  reader.cpp  writer.cpp
OldFrontend/examples/simple/Fortran/: CMakeLists.txt  writer.F90
OldFrontend/examples/simple/Python/: example.yaml
OldFrontend/examples/simple/complex/: reader.F90  writer.cpp
OldFrontend/examples/simple/mixed/: CMakeLists.txt  example.yaml  writer.F90
OldFrontend/examples/wdmapp_coupled_sim/: CMakeLists.txt  coupled_sim.yaml  edge_writer.py
OldFrontend/plot/: CMakeLists.txt  plot_util.py
OldFrontend/src/: kittie-plotter.py
OldFrontend/src/Python/: setup.py
OldFrontend/src/cpp/: CMakeLists.txt  kittie.h
OldFrontend/util/: CMakeLists.txt  effis-compose.py  effis-submit.py  kittie_common.py  kittie_monitor.py
PythonFrontend/: .gitignore  pyproject.toml
PythonFrontend/Examples/Date/: Compose.py
PythonFrontend/Examples/LoginLauncher/: Compose.py  TestApp.py
PythonFrontend/Examples/NodeShare-Hostname-Sleep/: HostnameSleep.py
PythonFrontend/Examples/T3D/: adios2cfg.xml
PythonFrontend/Examples/XGC/: Compose.py
PythonFrontend/src/effis/composition/: backup.py  campaign.py  node.py
PythonFrontend/src/effis/runtime/: BackupGlobus.py
config/: keywords-2.yaml
doc/: composition.md  installation.md
examples/simple/: CMakeLists.txt
examples/simple/Cpp/: CMakeLists.txt
examples/simple/Fortran/: CMakeLists.txt  example.yaml  reader.F90  setup.sh  writer.F90
examples/simple/Python/: CMakeLists.txt  example.yaml  reader.py  writer.py
examples/simple/complex/: CMakeLists.txt
examples/simple/mixed/: CMakeLists.txt  example.yaml  reader.cpp  writer.F90
examples/simple/mixed-2/: CMakeLists.txt  reader.F90  writer.cpp
examples/wdmapp_coupled_sim/: CMakeLists.txt  README.md  core_reader.py
plot/: CMakeLists.txt  DashboardPackager.py  DashboardPackagerGlobus.py  effis-plot-xgc-plane.py  effis-plot-y_vs_x.py  effis_plot_helper.py  login.py  plot_util.py  plotter-1d.py  plotter-2d-triangular.py  plotter-2d.py  plotter-perf.py
src/Fortran/: CMakeLists.txt  kittie.F90
src/Python/: CMakeLists.txt  setup.py
src/Python/kittie/: kittie-orig.py  kittie.py
src/cpp/: CMakeLists.txt  kittie.cpp  kittie.h  kittieConfig.cmake.in
src/effis/composition/: __init__.py  application.py  arguments.py  backup.py  campaign.py  input.py  log.py  node.py  runner.py  util.py  workflow.py
src/effis/runtime/: BackupGlobus.py  EffisSubmit.py  QueueRunner.py  __init__.py  globus.py  jobstep.py
src/effis/shim/: __init__.py  gx_omas.py  nc.py  omas_adios.py  vmec_omas.py
util/: CMakeLists.txt  effis-compose.py  effis-cpp.py  effis-globus.py  effis-movie.py  effis-submit.py  kittie_common.py
