[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["effis.composition", "effis.runtime"]

[project]
name = "effis"
description = "EFFIS workflow manager"
version = "1.0.0"
authors = [{name="Eric Suchyta", email="eric.d.suchyta@gmail.com"}]
dependencies = [
  "dill",
  "globus_sdk", 
]
#"cheetah @ git+ssh://git@github.com/CODARcode/cheetah.git"
#"adios2", 

[project.scripts]
effis-submit = "effis.runtime.EffisSubmit:main"
effis-globus-backup = "effis.runtime.BackupGlobus:main"
