[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["effis.composition", "effis.runtime"]

[project]
name = "effis"
description = "EFFIS workflow manager"
version = "0.3.0"
authors = [{name="Eric Suchyta", email="eric.d.suchyta@gmail.com"}]
#dependencies = ["codar"]

