execute_process(COMMAND ${PROJECT_SOURCE_DIR}/util/effis-cpp.py repo ${CMAKE_CURRENT_SOURCE_DIR} --tree-output=${CMAKE_CURRENT_BINARY_DIR})

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-1d-effis.py
	RENAME plotter-1d.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-perf-effis.py
	RENAME plotter-perf.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-2d-effis.py
	RENAME plotter-2d.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plotter-2d-triangular-effis.py
	RENAME plotter-2d-triangular.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/plot_util-effis.py
	RENAME plot_util.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/login-effis.py
	RENAME login.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/effis-plot-y_vs_x-effis.py
	RENAME effis-plot-y_vs_x.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/effis-plot-xgc-plane-effis.py
	RENAME effis-plot-xgc-plane.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/effis_plot_helper-effis.py 
	RENAME effis_plot_helper.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/plot
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
