#execute_process(COMMAND ${PROJECT_SOURCE_DIR}/util/effis-cpp.py repo ${CMAKE_CURRENT_SOURCE_DIR} --tree-output=${CMAKE_CURRENT_BINARY_DIR})

#install(
#	FILES ${CMAKE_CURRENT_BINARY_DIR}/edge_writer-effis.py
#	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim
#	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
#install(
#	FILES ${CMAKE_CURRENT_BINARY_DIR}/core_reader-effis.py
#	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim
#	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_SOURCE_DIR}/edge_writer.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_SOURCE_DIR}/core_reader.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/coupled_sim.yaml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/README.md DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/wdmapp_coupled_sim)
