preprocess()

install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/writer-effis.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_BINARY_DIR}/reader-effis.py
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_SOURCE_DIR}/writer.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
install(
	FILES ${CMAKE_CURRENT_SOURCE_DIR}/reader.py 
	DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python 
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/example.yaml DESTINATION ${CMAKE_INSTALL_PREFIX}/examples/simple/Python)
